--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -3,11 +3,11 @@
 # General
 seo_title: ""
 title: ""
-company: ""
+company: "Liquid Visual"
 description: ""
 
 # Contact Info
-email: test@example.com
+email: hello@liquidvisual.com
 phone: (05) 555 555
 fax: (05) 555 555
 address: "ABC Street, Earth"
