--- a/src/_data/sitemap.yml
+++ b/src/_data/sitemap.yml
@@ -4,14 +4,14 @@
 - title: Services
   url: /services/
 
-- title: Rates
-  url: /rates/
+- title: Projects
+  url: /projects/
 
-- title: Work
-  url: /work/
+- title: Toolbox
+  url: /toolbox/
 
-- title: Blog
-  url: /blog/
+- title: Tutorials
+  url: /tutorials/
 
 - title: Hire
   url: /hire/
