--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -1,9 +1,9 @@
 # GLOBAL SITE SETTINGS
 
 # General
-seo_title: ""
-title: ""
-company: "Liquid Visual"
+seo_title: "Liquid Visual - Responsive Web Development for Agencies"
+title: "liquidvisual - Responsive Web Development"
+company: "liquidvisual"
 description: ""
 
 # Contact Info
